--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "zoneinfo",
-    "version": "0.1.0",
+    "version": "0.1.3",
     "description": "Library to parse zoneinfo files for use with a wrapper around Date objects.",
     "homepage": "https://github.com/gsmcwhirter/node-zoneinfo",
     "author": {
@@ -9,12 +9,9 @@
         "url": "http://ideafreemonoid.org"
     },
     "main": "./lib/zoneinfo",
-    "modules": {
-        "countrycodes": "./lib/countrycodes"
-    },
     "repository": {
         "type": "git",
-        "url": "http://github.com/gsmcwhirter/node-zoneinfo.git"
+        "url": "https://github.com/gsmcwhirter/node-zoneinfo.git"
     },
-    "engines": ["node >= 0.2.0 < 0.3.0"]
+    "engines": ["node >= 0.2.0"]
 }
